// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm eOYkvJ border-theme-neutral-300"
    type="horizontal"
  />
</DocumentFragment>
`;

exports[`Divider should render a dashed 1`] = `
<div>
  <div
    class="sc-AxjAm hqlXXr border-theme-neutral-300"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render horizontal type 1`] = `
<div>
  <div
    class="sc-AxjAm eOYkvJ border-theme-neutral-300"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render vertical type 1`] = `
<div>
  <div
    class="sc-AxjAm jJSzSo border-theme-neutral-300"
    type="vertical"
  />
</div>
`;
